--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
-.App {
-  text-align: center;
+body{
+  padding:0;
+  margin:0;
+  box-sizing: border-box;
+  font-family: 'Courier New', Courier, monospace;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.carousel-control-prev{
+  rotate: -10deg;
+    margin-top: -23px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.carousel-control-next{
+  margin-top: -102px;
+  margin-right: 24px;
+  rotate:-10deg;
+}
+
+/* #carouselExampleControls1{
+ 
+  rotate: 10deg;
+  margin-top: -101px;
+}
+
+#carouselExampleControls2{
+  rotate: 10deg;
+  margin-top: -20px;
+} */
+
+.carousel-control-prev1{
+  position: absolute;
+  top: 45px;
+  left: -2px;
+  rotate:10deg;
+  background: transparent;
+  border-style: none;
+}
+
+.carousel-control-next1{
+  position: absolute;
+  top: 94px;
+  left: 238px;
+  rotate:10deg;
+  background: transparent;
+  border-style: none;
+}
+
+.topimg{
+  width:320px;
+  height:auto;
+  border-radius: 4px;
+}
+
+.carousel-control-prev2{
+  position: absolute;
+  top: 97px;
+  left: -1px;
+  rotate: -10deg;
+  background: transparent;
+  border-style: none;
+}
+
+.carousel-control-next2{
+  position: absolute;
+  top: 55px;
+  left: 243px;
+  rotate: -10deg;
+  background: transparent;
+  border-style: none;
+}
+
+.header{
+  position: sticky;
+    top: 0px;
+    background: #fff;
+}
+
+video{
+  height:auto;
+  border-radius: 4px;
+}
+
+img{
+  height:180px;
+}
+
+/* .drone{
+  display:none;
+}
+
+.topshots{
+  display:none;
+} */
+
+.carousel-inner{
+  rotate: -10deg;
+    border-radius: 4px;
+    width: 280px;
+    box-shadow: 9px 8px 10px;
+}
+
+.btn-primary{
+  border-style:none;
+}
+
+/* .carousel-inner1{
+  rotate: 10deg;
+  border-radius: 4px;
+  width: 280px;
+  box-shadow: -8px -8px 10px;
+} */
+
+/* media query */
+@media screen and (max-width: 550px) {
+  .carousel-inner{
+    rotate:0deg;
+    width:100%;
+    height:auto;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  .carousel-control-prev1{
+    display:none;
   }
 }
